force-app/main/default/objects/History_Tracking__c/History_Tracking__c.object-meta.xml
<CustomObject>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>HT#{0}</displayFormat>
        <label>History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>