force-app/main/default/objects/History_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL26-190 - To track Account related fields</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>History Tracking</relationshipLabel>
    <relationshipName>History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>