force-app/main/default/objects/History_Tracking__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset History Tracking</relationshipLabel>
    <relationshipName>History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>