force-app/main/default/objects/History_Tracking__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>History Tracking</relationshipLabel>
    <relationshipName>History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>