force-app/main/default/objects/History_Tracking__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>History Tracking</relationshipLabel>
    <relationshipName>History_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>