force-app/main/default/objects/History_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>